# Promps-Ent

./: .gitignore  .gitmodules  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  SECURITY.md  TODO.md  count_lines.sh  package-lock.json  package.json  prompt_output.txt  stats_data.json  tauri.conf.json
.ai-context/: ESSENTIAL.md  README.md  ROADMAP_2026.md  init.zsh
.ai-context/archive/: TODO_automation.md  TODO_emoji-context_2026-01-09.md
.github/: DISCUSSIONS.md  DISCUSSIONS_SETUP.md  RELEASE_TEMPLATE.md  WELCOME_DISCUSSION_DRAFT.md
.github/DISCUSSION_TEMPLATE/: development.yml  documentation.yml  general.yml  ideas.yml  question.yml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md  カスタム課題テンプレート.md  バグレポート.md  機能リクエスト.md
.github/workflows/: doc-check.yml  feature-branch-test.yml  release.yml  sync-downstream.yml  sync-upstream.yml  update-ai-context-shared.yml  version-bump.yml
capabilities/: default.json
docs/: INDEX_en.md  INDEX_ja.md  Promps_Concept_Discussion.txt  README.md
docs/design/: ARCHITECTURE.md  ARCHITECTURE_en.md
res/: index.html
res/css/: common.css  sharing.css
res/js/: ai-compare.js  ai-import.js  ai-send.js  api-keys.js  block-favorites-manager.js  blockly-config.js  category-editor.js  color-theme-manager.js  export-manager.js  floating-palette.js  i18n.js  lan-share.js  main.js  project-index.js  project-manager.js  project-sidebar.js  qr-share.js  (+5 more)
scripts/: fetch_stats.py  pre-release-check.sh  update_readme_stats.py
src/: commands.rs  lib.rs  main.rs
(+47 files in other folders)
